--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Telegent/obj
+/Telegent/bin/Release/netcoreapp2.0
+/.vs/Telegent/v15
+/.vs
